--- a/qb-banking/nui/style.css
+++ b/qb-banking/nui/style.css
@@ -22,11 +22,10 @@ body {
 }
 
 #bankingContainer {
-    background: #f3f3f3;
+    background: linear-gradient(#151515,#0027ec);
     min-height: 800px;
     max-height: 800px;
-    border-top: 5px solid #dc143cbf;
-    border-bottom: 5px solid #dc143cbf;
+    opacity: 0.9;
     display: none;
    
 }
@@ -35,7 +34,7 @@ body {
 }
 
 #ATMContainer {
-    background: rgba(0, 0, 0, 0.8) !important;
+    background: rgba(2, 19, 250, 0.8) !important;
     border-radius: 20px;
     min-height:800px;
     max-height:800px;
@@ -44,7 +43,7 @@ body {
 }
 
 .statement:hover {
-    background: rgba(150, 149, 149, 0.5) !important;
+    background: transparent !important;
 }
 
 #v-pills-tabContent, #v-pills-tabContent-atm {
@@ -70,8 +69,8 @@ body {
 }
 
 .title {
-    color: #3e3e3e;
-    border-left: 2px solid #dc143c;
+    color: #fffcfc;
+    border-left: 2px solid #ffffff;
     font-family: 'Poppins';
     margin-bottom: 28px;
 }
@@ -87,17 +86,18 @@ body {
 
 .nav-pills .nav-link.active, .nav-pills .show>.nav-link {
     color: #fff !important;
-    background-color: #dc143c;
+    background-color: #0318ff;
+    border-radius: 15px;
     font-family: 'Poppins', sans-serif;
     font-weight: 600;
-    font-size: 0.9rem; }
+    font-size: 1rem; }
 
     .shadow-lg {
-        box-shadow: none !important;
+        box-shadow: 0 0 35px #0027ec!important;
     }
 
 a.nav-link{
-    color: #4a4a4a !important;
+    color: #ffffff !important;
     font-family: 'Poppins', sans-serif;
     font-weight: 600;
     font-size: 0.9rem;
@@ -105,20 +105,23 @@ a.nav-link{
 }
 
 .account-card {
-    background: rgb(220 20 60);
+    background: rgb(8, 1, 131);
+    border-radius: 10px;
+    border-color: #0b0c12;
     color: white;
 }
 
 #logoffbutton {
-    background-color: #6d6d6d;
+    background-color: rgb(8, 1, 131);
+    border-radius: 15px;
     color: white;
 }
 
 
 .index-card {
-    background: rgb(109 109 109);
+    background: transparent;
     color: white;
-    border-top: 7px solid #dc143c;
+    border-top:transparent;
 }
 
 .card-text {
@@ -137,6 +140,7 @@ h3.texth3 {
     /* top: 12%; */
     /* margin-top: 15px; */
   }
+  
   .lds-grid div {
     position: absolute;
     width: 27px;
@@ -202,7 +206,7 @@ h3.texth3 {
 
   .smalltext {
     font-size: 12px;
-    color: black;
+    color: rgb(255, 255, 255);
     font-family: 'Poppins', sans-serif;
     opacity: 0.9;
   }
@@ -217,6 +221,5 @@ h3.texth3 {
     font-size: 1em;
     font-family: 'Poppins', sans-serif;
     font-weight: 600;
-    color: #000000ad;
+    color: rgb(255, 255, 255);
   }
-
